# rust-kafka-producer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
