[package]
name = "producer"
version = "0.1.0"
authors = ["Daniel Kneipp <daniel.kneipp@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.24", features = ["cmake-build"] }
tokio = { version = "1.1.0", features = ["macros", "rt-multi-thread", "time"] }
clap = "3.0.0-beta.2"
log = "0.4.13"
flexi_logger = "0.17"